new start in simple shell

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,4 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
-Jimmy Nyachio
-Tasneem Abdeltawab Abdelaziz
+Tasneem Abdeltawab Abdelaziz <tasneemabdeltawab205@gmail.com>
